# QtOpenGL

./: .gitignore  CMakeLists.txt  QtOpenGL.cpp  QtOpenGL.h  QtOpenGL.pro  README.md  bunny.mtl  main.cpp  main_window.cpp  main_window.h  main_window.ui  phong.frag  phong.vert  qt_opengl.cpp  qt_opengl.h  qt_opengl.pro  resource.qrc
shaders/: phong.frag  phong.vert
